# fourteen_minesweeper_variants_solver

./: .gitignore  README.md  pyproject.toml
fourteen_minesweeper_variant_driver/ocr/: MV_OCR.ipynb  model.py  ocr.py
fourteen_minesweeper_variant_solver/: __init__.py  data.py  main.py  solver.py
fourteen_minesweeper_variant_solver/one/: connect.py  eye.py  neutral.py  out.py  snake.py  wall.py
fourteen_minesweeper_variant_solver/rule/: __init__.py  bridge.py  connected.py  cross.py  default.py  deviation.py  encrypted.py  flowers.py  group.py  horizontal.py  liar.py  modulo.py  rule.py  segment.py  triplet.py  util.py  vanilla.py
