[tool.poetry]
name = "14-minesweeper-variant-solver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.11.4210"
opencv-python = "^4.10.0.84"
pywinauto = "^0.6.8"
pywin32 = "^308"
pillow = "^11.0.0"
numpy = "^2.1.3"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
pylance = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
